Version 2.4.0
~~~~~~~~~~~~~
* Post DiFX-2.3

Version 2.3.0
~~~~~~~~~~~~~
* DifxMessageMk5Control message type added
* Version for DiFX-2.3, Dec 20, 2013

Version 2.2.0
~~~~~~~~~~~~~
Support for IPv6 within C code.  Likely overall performance improvement at the same time
  - python code, such as errormon, statemon, ..., are not yet converted.
  - warning: all code linking to difxmessage that might use IPv6 should change
    the size of from[] to DIFX_MESSAGE_MAX_INET_ADDRESS_LENGTH or face
    possible segfaulting
NOTE: these changes have been backed out until a concurrency issue is fixed
After a period of deprecation finally removed difxMessageSendCondition().  Use
  difxMessageSendDriveStats() instead.
Prefer to use new function DifxMessageSend2 over DifxMessageSend.  It is more
  efficient.
Allow spoofed hostname via the difxMessageInitFull() function.  Perhaps useful in
  cases where multiple interfaces exist on the same machine?
Version for DiFX-2.2, May 31, 2013

Version 2.1.0
~~~~~~~~~~~~
Version number change prior to DiFX-2.1
Version for DiFX-2.1, May 4, 2012

Version 2.0.2
~~~~~~~~~~~~~
Post 2.0.1
Add new Mark5 states "booting", "recording" and "copyto"
Add new Mark5 state "record"
Add SMART monitor message type for disk diagnostics
  one document per disk (i.e., 8 per module)
Change Condition message type to DriveStats
  attempts made to retain backward comatibility
Add dispersion measure to transient message
Fix parsing of Mark5 version messages and include a couple extra parameters
Add support for "restartSeconds" to DifxStartMessage
Add options for different start "functions"
Add support for diagnostic messages
Add support for file request
Add nCore to Load message
Add utility restartdifx

Version 2.0.1
~~~~~~~~~~~~~
Post version 2.0.0
Add binary message option for testdifxmessagereceive
Able to make RedHat RPM
Version for DiFX-2.0.1, June 10, 2011

Version 2.0.0
~~~~~~~~~~~~~